fix of vulnerability value

--- a/client/src/app/oiseau/oiseau.component.html
+++ b/client/src/app/oiseau/oiseau.component.html
@@ -43,7 +43,7 @@
           <select #newStatutSpeces>
             <option value="">Choisir le statut</option>
             <option value="Non menacée">Non menacée</option>
-            <option value="réoccupation mineure">Préoccupation mineure</option>
+            <option value="Préoccupation mineure">Préoccupation mineure</option>
             <option value="Vulnérable">Vulnérable</option>
           </select>
         </td>
